Improved datatypes
