# src/opera/api/controllers/info_controller.py
@@ -4,6 +4,8 @@ import json
 
 from opera.api.openapi.models.blueprint_metadata import BlueprintMetadata
 from opera.api.openapi.models.just_message import JustMessage
+from opera.api.openapi.models.deployment_log import DeploymentLog
+from opera.api.openapi.models.git_log import GitLog
 from opera.api.service import info_service, csardb_service, sqldb_service
 from opera.api.log import get_logger
 from opera.api.util import xopera_util, timestamp_util
@@ -28,14 +30,13 @@ def get_deploy_log(blueprint_token=None, session_token=None):  # noqa: E501
     :rtype: None
     """
     data = SQL_database.get_deployment_log(blueprint_token=blueprint_token, session_token=session_token)
-    return_data = [{timestamp_util.datetime_to_str(_data[0]): json.loads(_data[1])} for _data in data]
-    return_data.sort(key=lambda x: list(x.keys())[0], reverse=True)
-    if not return_data:
+    if not data:
         return JustMessage("Log file not found"), 400
-    return return_data, 200
+    # return [DeploymentLog.from_dict(json.loads(_data[1])) for _data in data], 200
+    return [json.loads(_data[1]) for _data in data], 200
 
 
-def get_git_log(blueprint_token, version_tag=None, all=None):  # noqa: E501
+def get_git_log(blueprint_token, version_tag=None, fetch_all=False):  # noqa: E501
     """get_git_log
 
      # noqa: E501
@@ -44,16 +45,16 @@ def get_git_log(blueprint_token, version_tag=None, all=None):  # noqa: E501
     :type blueprint_token: str
     :param version_tag: version_tag of blueprint
     :type version_tag: str
-    :param all: show all database entries, not just last one
-    :type all: bool
+    :param fetch_all: show all database entries, not just last one
+    :type fetch_all: bool
 
     :rtype: None
     """
 
-    data = SQL_database.get_git_transaction_data(blueprint_token=blueprint_token, version_tag=version_tag, all=all)
+    data = SQL_database.get_git_transaction_data(blueprint_token=blueprint_token, version_tag=version_tag, all=fetch_all)
     if not data:
         return JustMessage("Log file not found"), 400
-    return data, 200
+    return [GitLog.from_dict(item) for item in data], 200
 
 
 def get_status(format=None, token=None):  # noqa: E501
